# rm_tinyMPC_test

./: .gitignore  CMakeLists.txt  gimbal_controller_log.csv  plot_results.py
src/: gimbal_old.cpp  gimbal_test.cpp
src/gimbal_control/: CMakeLists.txt.disabled  GimbalController.cpp  GimbalController.h
src/tiny_mpc/: CMakeLists.txt  CMakeLists.txt.dsabled  Constants.h  TinyMpcSolver.cpp  TinyMpcSolver.h  Types.h
test/: gimbal.cpp  main.cpp
